fix 1px canvas overflow from width/height rounding

--- a/src/index.scss
+++ b/src/index.scss
@@ -191,6 +191,7 @@ button.selected + .popup {
 			transform: translateY(50%);
 			width: 100%;
 			height: 100%;
+			overflow: hidden;
 
 			canvas {
 				background: var(--gray-0);
@@ -205,7 +206,7 @@ button.selected + .popup {
 			margin: 0 0;
 		}
 
-		.diagram .canvas-container canvas {
+		.diagram .canvas-container {
 			border-radius: var(--border-radius);
 			outline: var(--border);
 		}
@@ -240,10 +241,7 @@ button.selected + .popup {
 				left: 0;
 				right: 0;
 				transform: none;
-
-				canvas {
-					border-radius: 0;
-				}
+				border-radius: 0;
 			}
 		}
 
